# Boids

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTION.md  Cursor_Reminder  README.md  build.bat  build.sh  imgui.ini
.github/workflows/: ci.yml  cmake.yml
cmake/: compiler.cmake  output.cmake  thirdparty.cmake  tools.cmake
demo/bgfx/: CMakeLists.txt  bgfx_test.cpp  bgfx_test.h
demos/bgfx/: CMakeLists.txt  main.cpp
demos/ozz_animation/: CMakeLists.txt  README.md  main.cpp
scripts/: build_bgfx.bat  build_bgfx.sh
shader/: CMakeLists.txt  fs_simple.sc  vs_simple.sc
src/: ShaderIncluder.h  main.cpp
src/Utils/: Camera.cpp  Camera.h  Log.h  WindowInfo.cpp  WindowInfo.h
src/core/: AnimationSystem.h  Boid.cpp  Boid.h  BoidManager.cpp  BoidManager.h  Entity.h  Simulation.cpp  Simulation.h
src/rendering/: Pipeline.cpp  Pipeline.h  PipelineStage.cpp  PipelineStage.h
src/rendering/stages/: DrawBoidsStage.cpp  DrawBoidsStage.h  InitializeStage.cpp  InitializeStage.h
src/ui/: BoidsParams.h  ImGuiLayer.cpp  ImGuiLayer.h
src/utils/: Log.cpp
src/viewport/: Viewport.cpp  Viewport.h
tests/: BoidManagerTest.cpp  BoidTest.cpp  CMakeLists.txt  CameraTest.cpp  PipelineTest.cpp  main_test.cpp
